# Skija

./: README.md
.github/workflows/: build.yml
platform/: CMakeLists.txt
platform/cc/: Drawable.cc
platform/cc/impl/: Library.cc
platform/cmake/: FindSkia.cmake  android.toolchain.cmake
script/: build.py  build_utils.py  cross_compile.py  package_platform.py
